# CxxScript

./: .gitignore  API_CHANGES.md  CMakeLists.txt  MULTI_FILE_GUIDE.md  ORGANIZED_STRUCTURE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.txt  README.md  REAL_WORLD_EXAMPLE.md  test_escape  test_escape.cpp
cmake/: CxxScriptConfig.cmake.in
examples/: demo_error_detection.cpp  demo_uninitialized.cpp  demo_whitespace.cpp  example_usage.cpp  test_debug.cpp
include/: AST.h  DataTypes.h  Interpreter.h  Lexer.h  Parser.h  ScriptManager.h  Token.h
scripts/: demo_concat.script  demo_escape.script  example.script  test_comments.script  test_unexpected_chars.script  test_uninitialized.script  test_whitespace.script
scripts/test_files/: business_logic.script  main_logic.script  math_utils.script  reporting.script  string_utils.script  validation_rules.script  validators.script  workflows.script
src/: DataTypes.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  ScriptManager.cpp  Token.cpp
tests/: test_arrays.cpp  test_bitwise.cpp  test_comprehensive.cpp  test_control_flow.cpp  test_error_handling.cpp  test_escape_sequences.cpp  test_external_functions.cpp  test_external_variables.cpp  test_interpreter  test_interpreter.cpp  test_lexer  test_lexer.cpp  test_multi_file  test_multi_file.cpp  test_parser  test_parser.cpp  test_real_world_app.cpp  test_string_concat  test_string_concat.cpp
